--- a/src/ui/Search.fxml
+++ b/src/ui/Search.fxml
@@ -21,7 +21,7 @@
       </ImageView>
       <Button layoutX="985.0" layoutY="31.0" mnemonicParsing="false" onAction="#behind" prefHeight="45.0" prefWidth="42.0" style="-fx-background-color: transparent;" />
       <Button fx:id="configurationSceneButton" layoutX="740.0" layoutY="14.0" mnemonicParsing="false" onAction="#confi" prefHeight="140.0" prefWidth="197.0" style="-fx-background-color: transparent;" />
-      <Button fx:id="addPlayerSceneButton" layoutX="122.0" layoutY="14.0" mnemonicParsing="false" onAction="#addPlayer" prefHeight="140.0" prefWidth="197.0" style="-fx-background-color: transparent;" />
+      <Button fx:id="addPlayerSceneButton" layoutX="122.0" layoutY="14.0" mnemonicParsing="false" onAction="#addPlayer" onMouseEntered="#focusAddPlayerSceneButton" onMouseExited="#unFocusAddPlayerSceneButton" prefHeight="140.0" prefWidth="197.0" style="-fx-background-color: transparent;" />
       <TextField fx:id="searchValue" layoutX="171.0" layoutY="300.0" prefHeight="25.0" prefWidth="124.0" promptText="Valor de busquedad" />
       <ChoiceBox fx:id="searchCriteria" layoutX="167.0" layoutY="372.0" prefHeight="25.0" prefWidth="133.0" />
       <Label layoutX="165.0" layoutY="346.0" text="Criterio de busquedad" textFill="WHITE">
